--- a/main.css
+++ b/main.css
@@ -1,27 +1,75 @@
 body, html{
     width: 100%;
     margin: 0;
+    background-color: lightgray;
+    align-items: stretch;
+    flex-direction: column;
+    flex-wrap:wrap;
+}
+
+.header{
+    flex: 1;
+    display: flex;
+    background-color: darkolivegreen;
+    flex-direction:row;
+    align-items: center;
+    margin:0;
+}
+
+.header span{
+    margin-left: auto;
+    align-self: center;
+}
+
+.header h1{
+    align-self: center;
 }
 
 .navigation{
-    font-size: 10px;
-    flex: 0 0 auto;
+    font-size: 20px;
+    flex: 1;
     background-color:rgb(165, 165, 165);
-    width: 200px;
+    width: 150px;
     height: 70%;
     border-radius: 10px;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
-    position: absolute;
-    left:0;
-    top:50;
+    position: relative;
+    padding-top:5;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
 
+.navlist{
+    list-style: none;
+    padding: 0;
+    margin: 2;
+}
 .navpoints a{
     color: blue;
+    text-decoration:none;
     padding: 0;
+    margin: 2px;
+    padding-bottom: 2px;
 }
 
 .navpoints a:hover{
-    color: purple;
+    animation: rainbow 1.5s infinite;
+}
+
+main{
+    flex: 0 0 auto;
+    position: relative;
+    flex-direction: row;
+}
+
+@keyframes rainbow{
+    0% {color: blue;}
+    16% {color: indigo;}
+    32% {color: violet;}
+    48% {color: red;}
+    66% {color: orange;}
+    83% {color: yellow;}
+    100% {color: green;}
 }
