--- a/main.css
+++ b/main.css
@@ -24,7 +24,6 @@ body, html{
 
 .navigation{
     font-size: 20px;
-    flex: .13;
     flex-direction: column;
     background-color:rgb(165, 165, 165);
     width: 150px;
@@ -59,7 +58,7 @@ main{
 }
 
 main div{
-    flex: 1;
+    padding-left: 10px;
 }
 
 @keyframes rainbow{
