--- a/main.css
+++ b/main.css
@@ -55,6 +55,8 @@ main{
     position: relative;
     flex-direction: row;
     display: flex;
+    padding-bottom: 5px;
+    border-bottom: 2px solid darkolivegreen;
 }
 
 main div{
