--- a/homepage.css
+++ b/homepage.css
@@ -1,9 +1,11 @@
 .about {
     display: flex;
     flex-direction: column;
+    width: 800px;
 }
 
 .about h2{
     display: flex;
     border-bottom: 2px solid black;
 }
+
