--- a/main.css
+++ b/main.css
@@ -27,7 +27,6 @@ body, html{
     flex-direction: column;
     background-color:rgb(165, 165, 165);
     width: 150px;
-    height: 75vh;
     border-radius: 10px;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
@@ -35,7 +34,7 @@ body, html{
 }
 
 .navlist{
-    list-style: none;
+    list-style: none;   
     padding: 0;
     margin: 2;
 }
@@ -43,6 +42,7 @@ body, html{
     color: rgb(0, 0, 0);
     text-decoration:none;
     padding: 0;
+    padding-top: 10;
     margin: 2px;
 }
 
