--- a/main.css
+++ b/main.css
@@ -4,6 +4,29 @@ body, html{
     background-color: lightgray;
 }
 
+.popup-container {
+    position: fixed;
+    size:300px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+.popup {
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items:center;
+}
+
+
 .header{
     flex: 1;
     display: flex;
