--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ body, html{
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
+    display: none;
 }
 
 .popup {
